# kmn-webconfig

./: .clang-format-ignore  .gitignore  CMakeLists.txt
include/: lwipopts.h
include/kmn_webconfig/: config.h  http.h  http_response.h  router.h  server.h  variables.h
include/kmn_webconfig/handlers/: dashboardHandler.h  definitionsHandler.h  gen204Handler.h  notFoundHandler.h  rootHandler.h  routes.h  variableHandler.h
src/: http.c  http_response.c  main.c  router.c  server.c  variables.c
src/handlers/: dashboardHandler.c  definitionsHandler.c  gen204Handler.c  notFoundHandler.c  rootHandler.c  variableHandler.c
test/: test.c
www/: CMakeLists.txt  index.html  index_html.h  package.json  vite.config.js
www/src/: main.js  style.css
